Capture far more connection detail and harden the capture path
Refine the plugin for advanced operators:
- Add ConnectionSnapshot, which builds richly detailed records for joins,
  pre-login failures and login failures. Captures identity, full network
  info (socket/IP/port/virtual host/brand/protocol/ping/transfer/view &
  simulation distance), client options (locale, main hand, chat/particle
  visibility, skin parts, ...), session history, exhaustive player state
  (health, hunger, xp, movement, pose, air, fire, velocity, potion
  effects, scoreboard tags, ...), location & world context, server
  context (MOTD, TPS, MSPT, tick manager, plugins, ...) and the JVM /
  OS / memory runtime environment.
- Add a defensive ConnectionRecord.ValueSupplier overload so any single
  failing getter is recorded as "(unavailable: <reason>)" instead of
  aborting the whole snapshot; nulls render as "(unknown)".
- Slim ConnectionListener down to event wiring + console output.
- cnt now reports status and byte size; richer startup banner.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_0145bnVPzdtXWr2teUPC8GnF